--- a/TicTacToe/TicTacToe.html
+++ b/TicTacToe/TicTacToe.html
@@ -4,7 +4,7 @@
       <title>Play Tic Tac Toe!</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="css/game.css">
     <script src="./JS/tictactoe.js"></script>
     <!-- Bootstrap CSS -->
