--- a/React_Project/React_3.html
+++ b/React_Project/React_3.html
@@ -7,11 +7,11 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <!--linking to react libraries and JSX library-->
-    <script scr="https://unpkg.com/react@16/umd/react.development.js"
+    <script src="https://unpkg.com/react@16/umd/react.development.js"
     crossorigin></script>
     <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"
     crossorigin></script>
-    <script src="https:unpkg.com/babel-standalone@6.15.0/babel.min.js"></script>
+    <script src="https://unpkg.com/babel-standalone@6.15.0/babel.min.js"></script>
    
   </head>
   <body>
